# spaghet

./: .gitignore  README.md  pyproject.toml
spaghet/spaghet_backend/: _.py  pins.py  top_level.py
spaghet/spaghet_backend/nodes/: __init__.py  statements.py
spaghet/spaghet_backend/nodes/control_flow/: __init__.py  context_manager.py  loops.py  match.py
spaghet/spaghet_backend/nodes/definitions/: __init__.py  coro.py  func.py
spaghet/spaghet_backend/nodes/expressions/: __init__.py  comprehensions.py  subscripting.py
spaghet/spaghet_backend/nodes/operations/: __init__.py  binary.py  boolean.py  comparison.py  f_str.py  unary.py  variable.py
tests/: test_spaghet.py
