[tool.poetry]
name = "spaghet"
version = "0.0.1"
description = "Node-Based Visual IDE for Python"
authors = ["AstroFloof <does.not.kompute@gmail.com>"]

[tool.poetry.dependencies]
python = "~=3.10.0"
dearpygui = "^1.3.1"
numba = "^0.55.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
